# baselinker_desc_automation

./: .gitignore   README.md  pyproject.toml  run_code.py
src/: ai_implementation.py  construct_urls.py  description.py  login_selenium.py
